--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <meta name="description" content="часы"> 
   <meta name="keywords" content="programming hero, web playground"> 
   <link rel="shortcut icon" href="images/favicon.ico" type="image/vnd.microsoft.icon"> 
-  <!--@bootstrapCss--> 
-  <!--<link rel="stylesheet" href="css/bootstrap.min.css">--> 
   <!--custom css--> 
   <link rel="stylesheet" href="css/style.css"> 
  </head> 
@@ -18,7 +16,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.min.js"></script> 
   <script src="js/main.js"></script>  
   <footer> 
-   <p class="programminghero">Learned and developed this site with <a href="http://www.programming-hero.com">Programming Hero</a></p> 
+   <p class="programminghero"></p> 
   </footer>
  </body>
 </html>
